hphp/test/slow/class_type_constant/type_constant11.php.expectf
Fatal error: Couldn't find constant C::T in %stest/slow/class_type_constant/type_constant11.php on line 7
